# Sistema-de-Logistica-Distribuida

./: .gitignore  README.md  Requisitos de Funcionalidades do Sistema Logístico.md  TESTES.md  Video.md  arq.mmd  docker-compose.yml  limpar-docker.sh  pyproject.toml  test-rabbitmq.py  test-sistema.sh  trabalho-pratico-1-mobile (1).md  trabalho-pratico-2-microsservicos.md  trabalho-pratico-logistica (1).md
api-gatway/: Dockerfile  README.md  pom.xml
app/: README.md  TESTES.md  pubspec.yaml
app/android/: build.gradle  gradle.properties  settings.gradle
app/android/app/: build.gradle
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/manager/: notification_manager.dart
app/linux/: CMakeLists.txt
docs/video/: README.md
infra/: definitions.json
infra/database/: docker-compose.yml
infra/rabbitmq/: Dockerfile  docker-compose.yml
lambda/campanhas/: lambda_function.py
lambda/cupons/: lambda_function.py
lambda/email_processor/: lambda_function.py
notificacao/: Dockerfile  README.md  pom.xml
notificacao/src/: Dockerfile
pedidos/: Dockerfile  README.md  pom.xml
rastreamento/: Dockerfile  README.md  pom.xml
terraform/: .terraform.lock.hcl  README.md  README_EMAILS.md  campanha_teste.json  campanha_teste_lambda.json  campanhas.tf  check_emails_status.sh  cupons-api-postman-collection.json  cupons.tf  emails_teste.csv  main.tf  outputs.tf  populate_cupons.py  postman-collection.tpl  response.json  setup_emails.sh  terraform.tfstate  terraform.tfstate.backup  variables.tf  verified_emails.json
usuario/: Dockerfile  pom.xml
(+179 files in other folders)
