[project]
name = "lab"
version = "0.1.0"
description = ""
authors = [
    {name = "AriHenrique",email = "arihenriquedev@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lab", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
